@@ -791,14 +791,9 @@ int32_t SPVM__Sys__Socket__WSAPoll(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t timeout = stack[2].ival;
   
-  int32_t status = WSAPoll(fds, nfds, timeout);
+  int32_t ready_count = WSAPoll(fds, nfds, timeout);
   
-  if (status == SOCKET_ERROR) {
-    env->die(env, stack, "[System Error]WSAPoll failed: %s", socket_strerror(env, stack, socket_errno(), 0), FILE_NAME, __LINE__);
-    return SPVM_NATIVE_C_CLASS_ID_ERROR_SYSTEM;
-  }
-  
-  stack[0].ival = status;
+  stack[0].ival = ready_count;
   
   return 0;
 #endif
